Fixed overflowing of todo divs in the bottom.

--- a/src/content.scss
+++ b/src/content.scss
@@ -1,19 +1,20 @@
 
 // content
-.content {
+.content-container {
   position: relative;
   width: 1360px;
   min-height: 500px;
-  top: 272px;
-  margin: auto;
+  // top: 272px;
+  margin: 20px auto 0 auto;
   background: radial-gradient(at 700% -700%, white, transparentize($color: $dark-blue, $amount: .3));
   // border: solid 1px $dark-blue;
   border-radius: 12px;
   box-shadow: $dark-blue 2px 3px 4px;
+
 }
 
 @media (max-width: 1440px) {
-  .content {
+  .content-container {
     width: 92%;
   }
 }
