--- a/src/header.scss
+++ b/src/header.scss
@@ -1,8 +1,14 @@
 // header
+.header-container {
+  position: relative;
+  height: 240px;
+  width: 100%;
+}
+
 header {
   width: 100%;
   height: 200px;
-  position: fixed;
+  position: absolute;
   z-index: 12;
   .wrapper {
     width: 85%;
