--- a/src/style.scss
+++ b/src/style.scss
@@ -22,21 +22,53 @@ $dark-blue: #0d324d;
 
 // main
 .main {
-  min-height: 100vh;
+  min-height: 100%;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background: radial-gradient(at -200% -100%, white, $light-blue);
+}
+
+// content - main wrapper of cards
+.content {
+  width: 100%;
+  display: grid;
+  grid-auto-flow: row dense;
+  grid-template-columns: 1fr 1fr;
+}
+
+@media (min-width: 768px) {
+  .content {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 992px) {
+  .content {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1200px) {
+  .content {
+    grid-template-columns: repeat(5, 1fr);
+  }
 }
 
 // todo cards layout
 .todo-item {
   position: relative;
   max-height: 520px;
+  padding: 10px 0;
   border: solid 1px red;
+  overflow: hidden; // this fixes overflow of todos from document in the bottom
   .wrapper {
     position: relative;
     z-index: 1;
     width: 200px;
     height: 240px;
-    margin: 10px auto;
+    margin: auto;
     border: solid 1px $dark-blue;
     border-radius: 10px;
     display: flex;
@@ -116,8 +148,6 @@ $dark-blue: #0d324d;
     position: relative;
     top: -240px;
     margin: 0 auto;
-    
-
     border: solid 1px;
   }
 
@@ -134,6 +164,7 @@ $dark-blue: #0d324d;
     font-weight: 600;
     color: transparentize($color: $dark-blue, $amount: 0.2);
     text-shadow: $dark-blue 0px 0px 1px;
+    background: rgba(255, 255, 255, 0.719);
     cursor: pointer;
     transition: color .25s;
     :nth-child(2) {
